# gstreamer-tutorials

./: CMakeLists.txt  README.md  basic-tutorial-1.c  main.c
src/: basic-tutorial-12.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-7.c  basic-tutorial-8.c  main.c
